:recycle: 자바 버전 11 다운그레이드로 인한 stream 변경